Fixed truncate issues with tags

--- a/frontend/notex/src/index.css
+++ b/frontend/notex/src/index.css
@@ -32,3 +32,29 @@
     @apply text-xs text-slate-400;
   }
 }
+
+.scrollbar-custom {
+  scrollbar-width: thin; /* For Firefox */
+  scrollbar-color: #cbd5e1 #f8fafc; /* For Firefox */
+  border-radius: 5px;
+}
+
+.scrollbar-custom::-webkit-scrollbar {
+  width: 12px;
+  height: 12px;
+}
+
+.scrollbar-custom::-webkit-scrollbar-track {
+  background: #f8fafc;
+  border-radius: 10px;
+}
+
+.scrollbar-custom::-webkit-scrollbar-thumb {
+  background: #E9EFF5;
+  border-radius: 5px; /* Fully rounded edges */
+  border: 3px solid #f8fafc; /* Padding around the thumb */
+}
+
+.scrollbar-custom::-webkit-scrollbar-thumb:hover {
+  background: #E9EFF5;
+}
